# teager

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  setup.py
inc/: Parser.h
inc/polo-parser/: Parser.h
src/: Makefile  Parser.cpp  cmake_install.cmake  main.cpp  teager.cpp
src/polo-parser/: Parser.cpp  main.cpp
test/: CMakeLists.txt  test.py
test/files/: test_c.c  test_multiple_functions.c  test_naspace_handling.cpp  test_single_function.c  test_single_function.cpp  test_symbol_type.cpp
test/polo-parser-test/: main.cpp
